--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "@babel/parser": "^7.16.5",
     "@babel/traverse": "^7.16.5",
     "@babel/types": "^7.16.0",
+    "@rollup/plugin-alias": "^3.1.8",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@types/babel__traverse": "^7.14.2",
     "@types/fs-extra": "^9.0.13",
     "enhanced-resolve": "^5.8.3",
     "fs-extra": "^10.0.0",
     "is-odd": "^3.0.1",
-    "rollup": "^2.61.1"
+    "rollup": "^2.61.1",
+    "upper-case": "^2.0.2"
   },
   "name": "subgroup",
   "version": "1.0.0",
